app/src/test/resources/programs/valid/arrays/arrayOfArray.exe
foo main() -> Int = {
    let arr: [[Int]] = new [[Int]] (2);

    arr[0] = new [Int] (3);
    arr[1] = new [Int] (4);

    del arr[0];
    del arr[1];
    del arr;
}
