app/src/test/resources/programs/invalid/various/InvalidTokens.exe
foo main() -> Int = {
    ~0;
    $1;
    2^;
}
